# workspace

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sh
notebooks/: 01_journal_raw_to_structured.ipynb  02_compte_charges_raw_to_structured.ipynb  03_generation_cube_app.ipynb  exploration.ipynb
src/: 01_journal_raw_to_structured.py  02_compte_charges_raw_to_structured.py  03_generation_cube_app.py  app.py  app_v2.py  constants.py  paths.py  test.py  utils.py
