[tool.poetry]
name = "pee-freitas"
version = "0.1.0"
description = ""
authors = ["Quentin Liance <quentin.liance@polynom.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
ipykernel = "^6.29.5"
jinja2 = "^3.1.5"
streamlit = "^1.41.1"
streamlit-aggrid = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
